Fix themepicker alignment

--- a/src/app/header/theme-picker/theme-picker.component.scss
+++ b/src/app/header/theme-picker/theme-picker.component.scss
@@ -24,7 +24,7 @@
     height: 18px;
     position: relative;
     border: 1px solid $devui-brand;
-    margin-left: 8px;
+    // margin-left: 8px;
 
     .brand-color {
         position: absolute;
